# bmi-c

./: .travis.yml  CMakeLists.txt  README.md  bmi.h  bmic.pc.cmake
.bmi/: api.yaml  info.yaml
.github/workflows/: test.yml
bmi/: CMakeLists.txt  bmi.c  bmic.pc  bmic.pc.cmake  bmilib.h
heat/: CMakeLists.txt  bmi_heat.c  bmi_heat.h  heat.c  heat.h  heat.pc.cmake
poisson/: CMakeLists.txt  bmi.h  bmi_poisson.c  bmi_poisson.h  poisson.c
testing/: CMakeLists.txt  test_get_value.c  test_grid_info.c  test_irf.c  test_print_var_names.c  test_set_value.c
